llvm/test/tools/llubi/assume_null_all_ones.ll
; NOTE: Assertions have been autogenerated by utils/update_llubi_test_checks.py UTC_ARGS: --version 6
; RUN: not llubi --verbose < %s 2>&1 | FileCheck %s

target datalayout = "po1:64:64"

define void @main() {
  %storage = alloca ptr
  store i64 -1, ptr %storage
  %res = load ptr addrspace(1), ptr %storage
  call void @llvm.assume(i1 true) ["nonnull"(ptr addrspace(1) %res)]
  ret void
}
; CHECK: Entering function: main
; CHECK-NEXT:   %storage = alloca ptr, align 8 => ptr 0x8 [storage]
; CHECK-NEXT:   store i64 -1, ptr %storage, align 4
; CHECK-NEXT:   %res = load ptr addrspace(1), ptr %storage, align 8 => ptr 0xFFFFFFFFFFFFFFFF [dangling]
; CHECK-NEXT: Stacktrace:
; CHECK-NEXT: #0   call void @llvm.assume(i1 true) [ "nonnull"(ptr addrspace(1) %res) ] at @main
; CHECK-NEXT: Immediate UB detected: The pointer ptr 0xFFFFFFFFFFFFFFFF [dangling] violates nonnull assumption.
; CHECK-NEXT: error: Execution of function 'main' failed.
